Removed all media disable flags from mozconfig.... (+3 more)
- Removed all media disable flags from [mozconfig.macosx](../bluegriffon/config/mozconfig.macosx) (`--disable-av1`, `--disable-ffmpeg`, `--disable-jxl`, `--disable-webspeech`, `--disable-synth-speechd`): each flag causes cascading build failures in Gecko's tightly coupled build system (missing `media_libdav1d_asm`, broken prefs, missing IPDL files). The media code compiles but is unused by the editor. Major build savings already come from `--disable-webrtc` and `--disable-tests`
- Updated [README.md](../README.md): rewrote overview to describe ESR 140 modernization strategy, added project status section, added [docs/CHANGELOG.md](CHANGELOG.md) link, removed Contributing section
- Updated [docs/ROADMAP.md](ROADMAP.md): rewrote Gecko situation section to reflect completed ESR 140 migration and remaining UI work
- Added mozconfig flags to disable unnecessary media features for a text editor: `--disable-av1`, `--disable-ffmpeg`, `--disable-jxl`, `--disable-webspeech`, `--disable-synth-speechd` (skips AV1/dav1d, FFmpeg codecs, JPEG XL, and speech API compilation)

--- a/bluegriffon/base/locale/en-US/bluegriffon/bluegriffon.dtd
+++ b/bluegriffon/base/locale/en-US/bluegriffon/bluegriffon.dtd
@@ -520,3 +520,25 @@
 <!ENTITY structureBar.caption "Structure bar">
 
 <!ENTITY cmd.showReleaseNotes.label           "Show Release Notes">
+
+<!-- Entities formerly in editMenuOverlay.dtd (removed in ESR 140) -->
+<!ENTITY findCmd.label             "Find">
+<!ENTITY findCmd.key               "F">
+<!ENTITY findCmd.accesskey         "F">
+<!ENTITY findAgainCmd.label        "Find Again">
+<!ENTITY findAgainCmd.key          "G">
+<!ENTITY findAgainCmd.accesskey    "g">
+
+<!-- Entities formerly in baseMenuOverlay.dtd (removed in ESR 140) -->
+<!ENTITY minimizeWindow.key        "m">
+<!ENTITY minimizeWindow.label      "Minimize">
+<!ENTITY bringAllToFront.label     "Bring All to Front">
+<!ENTITY zoomWindow.label          "Zoom">
+<!ENTITY windowMenu.label          "Window">
+<!ENTITY preferencesCmdMac.commandkey ",">
+<!ENTITY servicesMenuMac.label     "Services">
+<!ENTITY hideThisAppCmdMac2.label  "Hide &brandShorterName;">
+<!ENTITY hideThisAppCmdMac2.commandkey "H">
+<!ENTITY hideOtherAppsCmdMac.label "Hide Others">
+<!ENTITY hideOtherAppsCmdMac.commandkey "H">
+<!ENTITY showAllAppsCmdMac.label   "Show All">
